--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "nodemon": "nodemon ./bin/www",
+    "nodemondeb": "nodemon --debug ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
