--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "debug": "~2.1.1",
     "ejs": "~2.3.1",
     "express": "~4.12.2",
+    "express-jwt": "^3.0.0",
+    "jsonwebtoken": "^5.0.0",
     "mongoose": "^3.8.25",
     "morgan": "~1.5.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0"
   }
 }
